--- a/title.html
+++ b/title.html
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form (project1)</title>
-    <link rel="stlesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-  <form id="form" class="">
-    <h2>'Register with us</h2>
-    <div class="form-control"></div>
-    <label for="Username"> "Username" </label>
-    <input type="text" id="Username" placeholder="Enter Username">
-    <small>Error Message</small>
-   </form>
-   </div>
-   <div class="container">
-    <form id="form" class="">
-      <h2>'Register with us</h2>
-      <div class="form-control"></div>
-      <label for="Email"> "Email" </label>
-      <input type="text" id="Email" placeholder="Enter Email">
-      <small>Error Message</small>
-     </form>
-     </div>
-     <div class="container">
-        <form id="form" class="">
-          <h2>'Register with us</h2>
-          <div class="form-control"></div>
-          <label for="Password"> "Password" </label>
-          <input type="text" id="Password" placeholder="Enter Password">
-          <small>Error Message</small>
-         </form>
-         </div>
-         <div class="container">
-            <form id="form" class="">
-              <h2>'Register with us</h2>
-              <div class="form-control"></div>
-              <label for="Password"> "Password" </label>
-              <input type="text" id="Password" placeholder="Enter Password again">
-              <small>Error Message</small>
-             </form>
-             </div>
-    <button>
-        Submit
-    </button>
-                    
-   <script src="style.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Form Validator</title>
+  </head>
+  <body>
+    <div class="container">
+      <form id="form" class="form">
+        <h2>Register With Us</h2>
+        <div class="form-control">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter username" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Enter email" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter password" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password2">Confirm Password</label>
+          <input
+            type="password"
+            id="password2"
+            placeholder="Enter password again"
+          />
+          <small>Error message</small>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
